@@ -19,6 +19,7 @@
 
 import os
 import webbrowser
+from PyQt4 import QtGui
 
 """
 A webbrowser extension that respects user's preferred browser on each
@@ -68,4 +69,8 @@ if 'windows-default' in webbrowser._tryorder:
     webbrowser.register('iexplore', None, iexplore)
 
 
-open = webbrowser.open
+def open(url):
+    try:
+        webbrowser.open(url)
+    except webbrowser.Error, e:
+        QtGui.QMessageBox.critical(None, _("Web Browser Error"), _("Error while launching a web browser:\n\n%s") % (e,))
