@@ -2,6 +2,7 @@ Version 0.9.0beta1 - 2007-05-XX
  * Bug Fixes:
    * F1 for Help instead of CTRL+H on Windows and Linux. (#2485, Nikolai Prokoschenko)
    * Tabbing focus transition from search isn't as expected. (#2546, Nikolai Prokoschenko)
+   * Display an error message if launching a web browser failed.
 
 Version 0.9.0alpha9 - 2007-05-12
  * New Features:
